# rust-service

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Config.toml  Dockerfile  README.md
.github/workflows/: ci.yml  ecr-push.yml
.github/workloads/: ci.yml  ecr-push.yml
k8s/: aws-secrets.yaml  deployment.yaml  namespace.yaml  service-account.yaml  service.yaml
src/: config.rs  main.rs
terraform/: ecr.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/azure/: aks.tf  main.tf  outputs.tf  providers.tf  variables.tf
