[package]
name = "rust-service"
version = "0.1.0"
edition = "2018"

# Dependencies
[dependencies]
actix-web = "4"
env_logger = "0.11.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
config = "0.14.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"
dotenv = "0.15"

